--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Riddhi Bajaj - Chief of Staff Application | Flint.ai</title>
+    <title>Riddhi Bajaj - Chief of Staff Application | Flint</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Michroma&display=swap" rel="stylesheet">
+    <link rel="icon"
+        href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🔳</text></svg>">
     <style>
         * {
             margin: 0;
@@ -908,14 +910,14 @@
         </div>
         <div class="hero-content">
             <div class="hero-text">
-                <p class="hero-subheadline">Chief of Staff Application</p>
+                <p class="hero-subheadline">Riddhi Bajaj</p>
                 <h1 class="hero-headline">
-                    Built to Scale
-                    <span class="hero-headline-highlight">Flint's Next Chapter</span>
+                    Chief of Staff
+                    <span class="hero-headline-highlight">@ Flint</span>
                 </h1>
                 <p class="hero-description">
-                    Strategic operator with over 6 years navigating GTM, analytics and product across startups. Ready to
-                    help Flint turn thousands on the waitlist into thousands of customers.
+                    I've scaled 0-to-1 before. Built systems that convert leads into customers. I speak both data
+                    and GTM fluently. And I'm ready to help navigate hypergrowth with a team that thinks like founders.
                 </p>
                 <div class="hero-cta">
                     <a href="#why-flint" class="btn btn-secondary">Why Flint</a>
@@ -952,8 +954,8 @@
         <div class="section-header">
             <h2 class="section-title">What I Bring to the Table</h2>
             <p class="section-subtitle">
-                I've worked across enough different worlds that I'm comfortable nowhere and everywhere. It keeps me
-                learning, questioning, and building instead of protecting what I already know.
+                I started close to customers, moved closer to the numbers, and now operate at the intersection of
+                growth, product, and strategy.
             </p>
         </div>
         <div class="cards-grid">
@@ -962,16 +964,18 @@
                 <div class="flip-card-inner">
                     <div class="flip-card-front">
                         <div class="card-accent"></div>
-                        <h3 class="card-title">Go-to-Market Operator</h3>
-                        <p class="card-subtitle">Build systems that scale acquisition</p>
+                        <h3 class="card-title">Founder force multiplier</h3>
+                        <p class="card-subtitle">I do the work that gives founders back time and clarity</p>
                     </div>
                     <div class="flip-card-back">
-                        <h3>Go-to-Market Operator</h3>
-                        <p>Built multi-channel funnels for market validation at GradRight → drove PMF discovery</p>
-                        <p>At DataVinci, owned CRM onboarding, lead segmentation, campaign execution → unlocked
-                            Singapore market entry</p>
-                        <p class="key-action"><strong>Key action:</strong> Designed lead scoring models and automated
-                            nurture sequences that converted cold prospects into demos</p>
+                        <h3>Founder force multiplier</h3>
+                        <p>Partnered directly with leadership across startups to turn priorities into
+                            execution plans</p>
+                        <p>Operated across product, GTM, analytics, and customer success without waiting for perfect
+                            structure</p>
+                        <p class="key-action"><strong>Anchor win:</strong> At GradRight, supported founders across
+                            onboarding, GTM, and product feedback loops, contributing to 20 percent ARR growth and 65
+                            percent retention.</p>
                     </div>
                 </div>
             </div>
@@ -980,17 +984,16 @@
                 <div class="flip-card-inner">
                     <div class="flip-card-front">
                         <div class="card-accent"></div>
-                        <h3 class="card-title">Strategic Generalist</h3>
-                        <p class="card-subtitle">Operate across product, marketing, ops</p>
+                        <h3 class="card-title">GTM systems builder</h3>
+                        <p class="card-subtitle">I build acquisition engines, not one-off campaigns.</p>
                     </div>
                     <div class="flip-card-back">
-                        <h3>Strategic Generalist</h3>
-                        <p>Driven startup strategy, market analysis, GTM planning across 3 high-growth geographies -
-                            India, Singapore, U.S.</p>
-                        <p>At DealStreetAsia, cross-functional project leadership, managed stakeholders across
-                            editorial, sales, product</p>
-                        <p class="key-action"><strong>Key action:</strong> Context-switch between product roadmaps,
-                            marketing campaigns, customer success, and ops—whatever needs solving</p>
+                        <h3>GTM systems builder</h3>
+                        <p>Designed and ran multi-channel funnels from first touch to conversion</p>
+                        <p>Built and operationalized CRMs, lead segmentation, scoring models, and nurture flows</p>
+                        <p class="key-action"><strong>Anchor win:</strong> At DataVinci, owned CRM onboarding and funnel
+                            experimentation, improving form conversion by 15 percent and discovery call lift by 40
+                            percent while supporting global market expansion.</p>
                     </div>
                 </div>
             </div>
@@ -999,15 +1002,18 @@
                 <div class="flip-card-inner">
                     <div class="flip-card-front">
                         <div class="card-accent"></div>
-                        <h3 class="card-title">Growth Through Retention</h3>
-                        <p class="card-subtitle">Turn customers into advocates</p>
+                        <h3 class="card-title">Analytics native operator</h3>
+                        <p class="card-subtitle">I move comfortably between intuition and evidence.</p>
                     </div>
                     <div class="flip-card-back">
-                        <h3>Growth Through Retention</h3>
-                        <p>Translated user feedback into product/GTM improvements → 40% retention lift</p>
-                        <p>Led demos, onboarding flows, and client reporting with data-driven approach</p>
-                        <p class="key-action"><strong>Key action:</strong> Built feedback loops between customer
-                            conversations and product priorities, ensuring what we shipped actually mattered</p>
+                        <h3>Analytics native operator</h3>
+                        <p>Trained in business analytics with deep hands-on experience in SQL, Python, and
+                            experimentation</p>
+                        <p>Use data to prioritize. Translate messy signals into clear recommendations team can act on
+                        </p>
+                        <p class="key-action"><strong>Anchor win:</strong> As a consultant with the Seattle Seahawks,
+                            built conversion and churn models and delivered lifecycle dashboards used for real targeting
+                            and decision-making.</p>
                     </div>
                 </div>
             </div>
@@ -1016,15 +1022,16 @@
                 <div class="flip-card-inner">
                     <div class="flip-card-front">
                         <div class="card-accent"></div>
-                        <h3 class="card-title">Ship Fast, Learn Faster</h3>
-                        <p class="card-subtitle">Founder mindset meets execution</p>
+                        <h3 class="card-title">Customer first executor</h3>
+                        <p class="card-subtitle">I listen closely, then turn insight into action.</p>
                     </div>
                     <div class="flip-card-back">
-                        <h3>Ship Fast, Learn Faster</h3>
-                        <p>Built a full-stack FinTech product prototype in 24 hours (design, architecture, user journey)
-                            → won hackathon</p>
-                        <p>Self-taught Python, SQL, ML, Tableau. Shipped production-grade projects for the Seahawks</p>
-                        <p class="key-action"><strong>Key action:</strong> Comfortable in ambiguity, learn by building
+                        <h3>Customer first executor</h3>
+                        <p>Ran onboarding and conversion calls across B2B SaaS clients</p>
+                        <p>Comfortable with demos, discovery, and customer success</p>
+                        <p class="key-action"><strong>Anchor win:</strong> At DealStreetAsia, turned attendee behavior
+                            and qualitative feedback into executive-ready narratives that shaped outreach strategy and
+                            helped drive a 30 percent y-o-y increase in ticket sales.
                         </p>
                     </div>
                 </div>
@@ -1089,7 +1096,7 @@
     </section>
 
     <footer class="footer">
-        <p>Built with purpose for Flint.ai | Riddhi Bajaj © 2026</p>
+        <p>Built with purpose for Flint | Riddhi Bajaj © 2026</p>
     </footer>
 
     <script>
